--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "d3": "~3.5.6",
     "bootstrap": "~3.3.5",
     "font-awesome": "~4.4.0",
-    "octicons": "~3.1.0"
+    "octicons": "~3.1.0",
+    "jquery-parsequery": "~1.0.0"
   }
 }
